@@ -1,5 +1,11 @@
 2019-08-16 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c:
+	  Improve ~ register allocation (RFE #638).
+
+2019-08-16 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/gen.c,
 	  src/z80/peeph-z80.def,
 	  src/z80/peeph-tlcs90.def,
